Fix presenter flex wrapping on Safari

--- a/wp-content/themes/Theme/stylesheets/scss/modules/_blog_post.scss
+++ b/wp-content/themes/Theme/stylesheets/scss/modules/_blog_post.scss
@@ -586,7 +586,10 @@ $color-text-dark: #000;
                 display: flex;
                 flex-direction: column;
                 flex-grow: 1;
-                flex-basis: 0;
+
+                @media #{$screen-desktop} {
+                    flex-basis: 0;
+                }
 
                 p {
                     margin-top: 10px;
